Initial graph querying

--- a/resources/public/css/skeleton-extensions.css
+++ b/resources/public/css/skeleton-extensions.css
@@ -20,3 +20,7 @@ input.not-input {
   border-radius: initial;
   margin-bottom: initial;
 }
+/* hide errors too */
+input.not-input.input-has-errors {
+  border: none;
+}
