--- a/resources/public/css/skeleton-extensions.css
+++ b/resources/public/css/skeleton-extensions.css
@@ -1,3 +1,9 @@
+/* Grid
+-------------------------------------------------- */
+.container.with-no-padding {
+    padding: 0;
+}
+
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* to make an element look like an input */
