--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -40,6 +40,8 @@ html, body, .container, #outer-container {
 }
 
 /* 1.1. Sidebar menu */
+
+/* 1.1.1. react-burger-menu styles */
 #burger-menu .bm-menu {
     background-color: #373a47;
     color: white;
@@ -70,8 +72,78 @@ html, body, .container, #outer-container {
 
 #graph-menu .bm-item-list .menu-content {
     height: calc(100% - 130px);
-    padding: 0 0.5em;
     overflow: auto;
+}
+
+/* 1.1.2. react-sanfona styles */
+.react-sanfona-item-title {
+    background-color: #1e222f;
+    color: #707484;
+    transition: background-color .3s;
+    padding: 0.2em 0.3em;
+    position: relative;
+}
+
+.react-sanfona-item-title:before {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 0.1em;
+    top: 50%;
+    margin-top: -16px;
+
+    /* .material-icons styles */
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+
+    content: "\e315" /*"keyboard_arrow_right"*/;
+}
+
+.react-sanfona-item-expanded .react-sanfona-item-title:before {
+    content: "\e313" /*"keyboard_arrow_down"*/;
+}
+
+.react-sanfona-item:first-child .react-sanfona-item-title {
+    border-top: none;
+}
+
+.react-sanfona-item-expanded .react-sanfona-item-title {
+    color: #fff;
+}
+
+.react-sanfona-item-body-wrapper {
+    color: #666;
+    position: relative;
+}
+
+/* 1.1.3 Item content style */
+.menu-item {
+    padding: 8px 4px;
+}
+
+.menu-item .actions {
+    text-align: right;
+}
+
+.menu-item .actions button {
+    margin-left: 5px;
+    margin-bottom: 0;
+    color: white;
+}
+
+.menu-item .actions button.delete {
+    background-color: rgba(255,0,0,.5);
 }
 
 /* 2. Content area */
