--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -84,7 +84,49 @@ html, body, .container, #app, #outer-container {
     position: relative;
 }
 
-.react-sanfona-item-title:before {
+.react-sanfona-item-expanded .react-sanfona-item-title {
+    color: #fff;
+}
+
+.react-sanfona-item-body-wrapper {
+    color: #666;
+    position: relative;
+}
+
+/* 1.1.2.1. New graph section */
+.new-graph {
+    margin-bottom: 0.5em;
+}
+
+.new-graph .react-sanfona-item-title:before {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 0.1em;
+    top: 50%;
+    margin-top: -16px;
+
+    /* .material-icons styles */
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+
+    content: "\e146" /*"add_box"*/;
+}
+
+/* 1.1.2.2. Existing graphs section */
+
+.existing-graphs .react-sanfona-item-title:before {
     position: absolute;
     width: 32px;
     height: 32px;
@@ -110,24 +152,11 @@ html, body, .container, #app, #outer-container {
     content: "\e315" /*"keyboard_arrow_right"*/;
 }
 
-.react-sanfona-item-expanded .react-sanfona-item-title:before {
+.existing-graphs .react-sanfona-item-expanded .react-sanfona-item-title:before {
     content: "\e313" /*"keyboard_arrow_down"*/;
 }
 
-.react-sanfona-item:first-child .react-sanfona-item-title {
-    border-top: none;
-}
-
-.react-sanfona-item-expanded .react-sanfona-item-title {
-    color: #fff;
-}
-
-.react-sanfona-item-body-wrapper {
-    color: #666;
-    position: relative;
-}
-
-/* 1.1.3 Item content style */
+/* 1.1.3. Item content style */
 .menu-item {
     padding: 8px 4px;
 }
